--- a/boost-config.jam.in
+++ b/boost-config.jam.in
@@ -1,3 +1,8 @@
+using zlib
+    : @ZLIB_VERSION@
+    : <include>@ZLIB_INCLUDE_DIR@
+      <search>@SDK_INSTALL_DIR@/lib
+    ;
 using python
     : @PYTHON_VERSION@  # version
     : @SDK_INSTALL_DIR@/bin/python@PYTHON_VERSION@  # cmd-or-prefix
