Fix python version for boost build system
When locating the python library boost relies on the version of python
to locate header and executable.  However both the executable and the
header files don't contain the patch element of the version number.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -481,6 +481,7 @@ if(NOT WIN32)
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.sh)
 else()
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.bat)
+    string(SUBSTRING "${PYTHON_VERSION}" 0 3 PYTHON_VERSION)
 endif()
 
 if(BUILD_SHARED_LIBS)
