Change and patch the boost build configuration
boost builds now (additional to the previous setup)
 * with debug symbols enabled
 * with pdb files on windows

The upstream doesn't install the pdb files of the libraries. The updated
patch enables that.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -510,6 +510,9 @@ ExternalProject_Add(boost
         threading=multi
         link=${BOOST_LINK}
         variant=${BOOST_VARIANT}
+        debug-symbols=on
+        debug-store=database
+        pch=off
         -s NO_BZIP2=1
         -d0 # Please, shut up
     INSTALL_COMMAND ""
