--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -519,6 +519,17 @@ ExternalProject_Add(boost
     INSTALL_DIR ${SDK_INSTALL_DIR}/Boost
 )
 
+ExternalProject_Add_Step(boost
+    copyDLL
+    DEPENDEES install
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_SOURCE_DIR}/CopyFiles.cmake --
+        <INSTALL_DIR>/lib/*.dll
+        ${SDK_INSTALL_DIR}/bin/
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_SOURCE_DIR}/DeleteFiles.cmake --
+        <INSTALL_DIR>/lib/*.dll
+    COMMENT "Copy boost dll files into SDK bin directory"
+)
+
 set_directory_properties(
     PROPERTIES
     ADDITIONAL_MAKE_CLEAN_FILES
