Split python-cmake patches into topics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,7 +168,11 @@ ExternalProject_Add(python-cmake
     URL https://github.com/python-cmake-buildsystem/python-cmake-buildsystem/archive/master.zip
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
     PATCH_COMMAND
-        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/python-cmake.patch
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/python-cmake-0-install_pdb_file_for_debug_and_relwithdebinfo.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/python-cmake-1-dont_install_python_cmake_export_targets.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/python-cmake-2-change_pathes_to_match_current_win32_sdk_layout.patch
     CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
     INSTALL_COMMAND ""
