Appveyor uses the `build_script` key to describe the build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: ci-{build}
 branches:
     only:
         - master
-build:
+build_script:
     - mkdir build
     - cd build
     - cmake ..
