Check out patches with native line ending
Appveyor sets `core.autocrlf=input` which causes the patches to be
checked out with UNIX style line endings, which are not consumed by the
GNU32 patch program.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ version: ci-{build}
 branches:
   only:
     - master
+init:
+  - git config --global core.eol native
+  - git config --global core.autocrlf true
 build_script:
   - mkdir build
   - cd build
