--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,5 +8,5 @@ init:
 build_script:
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake -G "Visual Studio 12" ..
   - cmake --build . --config RelWithDebInfo
