--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ branches:
 init:
   - git config --global core.eol native
   - git config --global core.autocrlf true
+install:
+  - '"C:\Program Files (X86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat"'
 build_script:
   - mkdir build
   - cd build
