--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,3 +12,13 @@ build_script:
   - cd build
   - cmake -G "Visual Studio 12" ..
   - cmake --build . --config RelWithDebInfo
+deploy:
+  release: $(APPVEYOR_REPO_TAG_NAME)
+  provider: GitHub
+  auth_token:
+    secure: mqkOnTRfVVRNofBa9tTEb2jdIjmJNhH7G8DPc05rxIy6/hkOl9y/h9FzB2MJD4rS
+  description: 'Release of the FreeOrionSDK'
+  artifact: /FreeOrionSDK_MSVC_[0-9]{4}-[0-9]{2}-[0-9]{2}.zip/
+  draft: true
+  on:
+    appveyor_repo_tag: true
