--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ version: ci-{build}
 branches:
   only:
     - master
+    - /FreeOrionSDK_[0-9]{4}-[0-9]{2}-[0-9]{2}/
 init:
   - git config --global core.eol native
   - git config --global core.autocrlf true
