Enable and fix MacOSX framework for libvorbis dependency
* Enable Mac OSX Framework generation for libvorbis target.
* Add CMAKE_FRAMEWORK_PATH to let find_library locate the ogg library properly.
  When using frameworks CMake uses the CMAKE_FRAMEWORK_PATH cache variable
  to locate the search path.  Because libvorbis requires the Ogg.framework
  the libvorbis needs to know the Ogg.framework location.
* Don't install pkg-config file when creating a MacOSX framework.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -400,6 +400,17 @@ ExternalProject_Add(libogg
     INSTALL_DIR ${LIBOGG_CONFIGURE_INSTALL_DIR}
 )
 
+if(WIN32)
+    set(LIBVORBIS_CONFIGURE_FLAGS "")
+    set(LIBVORBIS_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
+else()
+    set(LIBVORBIS_CONFIGURE_FLAGS
+        -DBUILD_FRAMEWORK=ON
+        -DCMAKE_FRAMEWORK_PATH=${SDK_INSTALL_DIR}/Frameworks
+    )
+    set(LIBVORBIS_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR}/Frameworks)
+endif()
+
 ExternalProject_Add(libvorbis
     DEPENDS patch libogg
     URL http://downloads.xiph.org/releases/vorbis/libvorbis-1.3.5.tar.gz
@@ -423,11 +434,14 @@ ExternalProject_Add(libvorbis
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/libvorbis/0008-Disable-MSVC-specific-compiler-warnings.patch
     COMMAND
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/libvorbis/0009-CMake-Use-install-command-for-both-framework-and-non.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/libvorbis/0010-Don-t-install-pkg-config-files-when-creating-a-MacOS.patch
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-    INSTALL_DIR ${SDK_INSTALL_DIR}
+        ${LIBVORBIS_CONFIGURE_FLAGS}
+    INSTALL_DIR ${LIBVORBIS_CONFIGURE_INSTALL_DIR}
 )
 
 ExternalProject_Add(openal-soft
