Enable and fix MacOSX framework for sdl2 dependency
* Use PUBLIC_HEADER property to install headers
* Add MacOSX Framework support
* Enable Framework on MacOSX
* Set framework install directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -328,6 +328,16 @@ ExternalProject_Add(freetype2
     INSTALL_DIR ${SDK_INSTALL_DIR}
 )
 
+if(WIN32)
+    set(SDL2_CONFIGURE_FLAGS "")
+    set(SDL2_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
+else()
+    set(SDL2_CONFIGURE_FLAGS
+        -DBUILD_FRAMEWORK=ON
+    )
+    set(SDL2_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR}/Frameworks)
+endif()
+
 ExternalProject_Add(sdl2
     DEPENDS patch
     URL https://www.libsdl.org/release/SDL2-2.0.4.tar.gz
@@ -339,6 +349,12 @@ ExternalProject_Add(sdl2
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/sdl2/0002-Never-build-and-install-SDL2main-library.patch
     COMMAND
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/sdl2/0003-Remove-Wl-no-undefined-linker-flag.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/sdl2/0004-CMake-Use-PUBLIC_HEADER-property-to-install-headers.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/sdl2/0005-CMake-Add-MacOSX-Framework-support.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/sdl2/0006-CMake-Set-framework-install-directory.patch
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
@@ -346,7 +362,8 @@ ExternalProject_Add(sdl2
         -DSDL_STATIC=OFF
         -DDIRECTX=OFF
         -DRENDER_D3D=OFF
-    INSTALL_DIR ${SDK_INSTALL_DIR}
+        ${SDL2_CONFIGURE_FLAGS}
+    INSTALL_DIR ${SDL2_CONFIGURE_INSTALL_DIR}
 )
 
 if(WIN32)
